[#254] java.lang.Boolean constructor is deprecated
Replaced all other constructors of primitive wrappers

Signed-off-by: Vasily Fedorov <vasily.fedorov@arsysop.ru>