@@ -26,7 +26,7 @@ public class PercentUsageComparator implements Comparator<String> {
 		if (index1 != -1 && index2 != -1) {
 			String s1 = o1.substring(0, index1);
 			String s2 = o2.substring(0, index2);
-			return (-1) * new Float(s1).compareTo(new Float(s2));
+			return (-1) * Float.valueOf(s1).compareTo(Float.valueOf(s2));
 		} else {
 			return 0;
 		}
