@@ -369,7 +369,7 @@ public class SaxMultiBugReportContentHandler extends DefaultHandler {
 			attachmentAttribute = repositoryTaskData.getRoot()
 					.createAttribute(TaskAttribute.PREFIX_ATTACHMENT + parsedText);
 			attachment = BugzillaAttachmentMapper.createFrom(attachmentAttribute);
-			attachment.setLength(new Long(-1));
+			attachment.setLength(Long.valueOf(-1));
 			attachment.setAttachmentId(parsedText);
 			attachment.setPatch(isPatch);
 			attachment.setDeprecated(isDeprecated);
